--- a/FRONT/src/pages/register/register.css
+++ b/FRONT/src/pages/register/register.css
@@ -1,7 +1,5 @@
-
 .registerbody{
-
-    background-color: rgb(68, 68, 68);
+    background: linear-gradient(to top right,#fc2c77 0%,#6c4079 100%);
     min-height: 50vw;
     height: 100%;
     width: 100%;
@@ -12,15 +10,17 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    font-family: monospace, serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 0.05em;
 
 }
 
-form{
+.registerform{
+    background-color: transparent;
     display: flex;
     flex-direction: column;
-    width: 400px;
+    align-items: center;
+    width: 450px;
     height: 100%;
     padding: 10px;
     border: 5px solid whitesmoke;
@@ -32,15 +32,56 @@ form{
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    border: 5px solid whitesmoke;
     padding: 0px;
     margin:25px;
+    border:none;
+}
+.mfieldset label{
+    color: white;
+    text-shadow: 0 0 4px rgb(255, 255, 255);
 }
 .mfieldset input{
     min-height: 28px;
     min-width: 50px;
+    font-size: 25px;
+    background-color: whitesmoke;
+    border: 1px solid white;
+    border-radius: 35px;
+    margin-top: 5px;
+    color: black;
+    box-shadow: 0 0 15px 0 rgb(0 0 0 / 60%);    
 }
-legend{
-    width:200px;
-    border: 5px solid whitesmoke;
+.registerform span{
+    font-size: 32px;
+    align-self: center;
+}
+.registerbutton{
+    width:100%;
+    height: 45px;
+    border: none;
+    border-radius: 35px;
+    font-size: 35px;
+    color: white;
+    background: linear-gradient(to top right, #18203f 0%,#7ebbf8 100%);
+   
+}
+.registerbutton:hover{
+    color: black;
+}
+
+@media (max-width:900px) {
+    .registerbody{
+        width: 100vw;
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
+    }
+    .registerform{
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+        padding: 0px;
+        margin: 0px;
+
+    }
 }
